<resources>
    <string name="Button_Enter">Enter</string>
    <string name="Summoner_Name">Summoner Name</string>
    <string name="Ranked_Solo_5v5">Ranked Solo 5v5</string>
    <string name="Normal_5v5">Normal 5v5</string>
    <string name="Dominion">Dominion</string>
    <string name="Normal_3v3">Normal 3v3</string>
    <string name="One_For_All">One For All</string>
    <string name="First_Blood_1v1">First Blood 1v1</string>
    <string name="First_Blood_2v2">First Blood 2v2</string>
    <string name="Hexakill">Hexakill</string>
    <string name="URF">U.R.F</string>
    <string name="Wins">Wins</string>
    <string name="Kills">Kills</string>
    <string name="Assists">Assists</string>
    <string name="Minion_Kills">Minion Kills</string>
    <string name="Neutral_Minion_Kills">Neutral Minion Kills</string>
    <string name="Turrets_Destroyed">Turrets Destroyed</string>
    <string name="Most_Kills">Most Kills</string>
    <string name="Most_Assists">Most Assists</string>
    <string name="Highest_Score">Highest Score</string>
    <string name="Most_Nodes_Captured">Most Nodes Captured</string>
    <string name="Nodes_Captured">Nodes Captured</string>
    <string name="Nodes_Neutralized">Nodes Neutralized</string>
    <string name="Most_Nodes_Neutralized">Most Nodes Neutralized</string>
    <string name="app_name">LoL Helper</string>
    <string name="action_settings">Settings</string>
    <string name="champion_select">Champion Select</string>
    <string name="in_game">In Game</string>
    <string name="counters">Counters</string>
    <string name="build_guides">Build Guides</string>
    <string name="jungle_timer">Jungle Timer</string>
    <string name="pre_game">Pre Game</string>
    <string name="team_builder">Team Builder</string>
    <string name="match_info">Match Info</string>
    <string name="build">Build</string>
    <string name="counter_picks">Counter Picks</string>
    <string name="player_stats">Player Stats</string>
    <string name="general_info">General Info</string>
    <string name="champions">Champions</string>
    <string name="items">Items</string>
    <string name="summoner_spells">Summoner Spells</string>
    <string name="ultimate_bravery">Ultimate Bravery</string>
    <string name="options">Options</string>
    <string name="title_activity_in_game">InGame</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_champion_select">ChampionSelect</string>
    <string name="title_activity_post_game">PostGame</string>
    <string name="title_activity_general_info">GeneralInfo</string>
    <string name="title_activity_options">Options</string>
    <string name="title_activity_build_guides">BuildGuides</string>
    <string name="title_activity_match_info">MatchInfo</string>
    <string name="title_activity_team_builder">TeamBuilder</string>
    <string name="title_activity_counters">Counters</string>
    <string name="title_activity_build">Build</string>
    <string name="title_activity_player_stats">PlayerStats</string>
    <string name="title_activity_champions">Champions</string>
    <string name="title_activity_items">Items</string>
    <string name="title_activity_build_screen">BuildScreen</string>
    <string name="title_activity_ultimate_bravery">UltimateBravery</string>
    <string name="title_activity_viewchampions">viewChampions</string>
    <string name="title_activity_viewitems">viewItems</string>
    <string name="title_activity_viewsummonerspells">viewSummonerSpells</string>
    <string-array name="champion_array">
        <item>Aatrox</item>
        <item>Ahri</item>
        <item>Akali</item>
        <item>Alistar</item>
        <item>Amumu</item>
        <item>Anivia</item>
        <item>Annie</item>
        <item>Ashe</item>
        <item>Blitzcrank</item>
        <item>Brand</item>
        <item>Caitlyn</item>
        <item>Cassiopeia</item>
        <item>Cho Gath</item>
        <item>Corki</item>
        <item>Darius</item>
        <item>Diana</item>
        <item>Dr. Mundo</item>
        <item>Draven</item>
        <item>Elise</item>
        <item>Evelynn</item>
        <item>Ezreal</item>
        <item>Fiddlesticks</item>
        <item>Fiora</item>
        <item>Fizz</item>
        <item>Galio</item>
        <item>Gangplank</item>
        <item>Garen</item>
        <item>Gragas</item>
        <item>Graves</item>
        <item>Hecarim</item>
        <item>Heimerdinger</item>
        <item>Irelia</item>
        <item>Janna</item>
        <item>Jarvan IV</item>
        <item>Jax</item>
        <item>Jayce</item>
        <item>Jinx</item>
        <item>Karma</item>
        <item>Karthus</item>
        <item>Kassadin</item>
        <item>Katarina</item>
        <item>Kayle</item>
        <item>Kennen</item>
        <item>Kha Zix</item>
        <item>Kog Maw</item>
        <item>LeBlanc</item>
        <item>Lee Sin</item>
        <item>Leona</item>
        <item>Lissandra</item>
        <item>Lucian</item>
        <item>Lulu</item>
        <item>Lux</item>
        <item>Malphite</item>
        <item>Malzahar</item>
        <item>Maokai</item>
        <item>Master Yi</item>
        <item>Miss Fortune</item>
        <item>Mordekaiser</item>
        <item>Morgana</item>
        <item>Nami</item>
        <item>Nasus</item>
        <item>Nautilus</item>
        <item>Nidalee</item>
        <item>Nocturne</item>
        <item>Nunu</item>
        <item>Olaf</item>
        <item>Orianna</item>
        <item>Pantheon</item>
        <item>Poppy</item>
        <item>Quinn</item>
        <item>Rammus</item>
        <item>Renekton</item>
        <item>Rengar</item>
        <item>Riven</item>
        <item>Rumble</item>
        <item>Ryze</item>
        <item>Sejuani</item>
        <item>Shaco</item>
        <item>Shen</item>
        <item>Shyvana</item>
        <item>Singed</item>
        <item>Sion</item>
        <item>Sivir</item>
        <item>Skarner</item>
        <item>Sona</item>
        <item>Soraka</item>
        <item>Swain</item>
        <item>Syndra</item>
        <item>Talon</item>
        <item>Taric</item>
        <item>Teemo</item>
        <item>Thresh</item>
        <item>Tristana</item>
        <item>Trundle</item>
        <item>Tryndamere</item>
        <item>Twisted Fate</item>
        <item>Twitch</item>
        <item>Udyr</item>
        <item>Urgot</item>
        <item>Varus</item>
        <item>Vayne</item>
        <item>Veigar</item>
        <item>Vel Koz</item>
        <item>Vi</item>
        <item>Viktor</item>
        <item>Vladimir</item>
        <item>Volibear</item>
        <item>Warwick</item>
        <item>Wukong</item>
        <item>Xerath</item>
        <item>Xin Zhao</item>
        <item>Yasuo</item>
        <item>Yorick</item>
        <item>Zac</item>
        <item>Zed</item>
        <item>Ziggs</item>
        <item>Zilean</item>
        <item>Zyra</item>
    </string-array>
</resources>