<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|top|fill_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fourfoureight.lolhelper.MainActivity"
    tools:ignore="MergeRootFrame" >
    
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/expand_down"
        android:layout_weight="1"
        android:onClick="ingame"
        android:text="@string/in_game" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/expand_down"
        android:layout_weight="1"
        android:onClick="championselect"
        android:text="@string/champion_select" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/player_stats"
        android:layout_weight="1"
        android:onClick="playerstats"
        android:text="@string/player_stats" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/expand_down"
        android:layout_weight="1"
        android:onClick="generalinfo"
        android:text="@string/general_info" />

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/options"
        android:layout_weight="1"
        android:onClick="options"
        android:text="@string/options" />
    
      <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:orientation="horizontal" >
	   </LinearLayout>

</LinearLayout>

