<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fourfoureight.lolhelper.GeneralInfo$PlaceholderFragment" >

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/expand_down"
        android:layout_weight="1"
        android:onClick="ingame" 
        android:text="@string/in_game" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/expand_down"
        android:layout_weight="1"
        android:onClick="championselect" 
        android:text="@string/champion_select" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/expand_down"
        android:layout_weight="1"		android:onClick="postgame" 
        android:text="@string/post_game" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/expand_up"
        android:layout_weight="1"
        android:onClick="generalinfo" 
        android:text="@string/general_info" />
    
            	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="3"
	        android:orientation="horizontal" >
	        	<LinearLayout
	        	    android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_weight="4"
		            android:orientation="vertical" ></LinearLayout>

		       <LinearLayout
		           android:layout_width="match_parent"
		           android:layout_height="match_parent"
		           android:layout_weight="1"
		           android:orientation="vertical" >

					<Button
				        android:id="@+id/button5"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:drawableLeft="@drawable/champions"
				        android:layout_weight="1"
				        android:text="@string/champions" />
				
				    <Button
				        android:id="@+id/button6"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:drawableLeft="@drawable/items"
				        android:layout_weight="1"
				        android:text="@string/items" />
				    
				    <Button
				        android:id="@+id/button8"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:drawableLeft="@drawable/summoner_spells"
				        android:layout_weight="1"
				        android:text="@string/summoner_spells" />
		       </LinearLayout>

	    </LinearLayout>

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/options"
        android:layout_weight="1"
        android:onClick="options" 
        android:text="@string/options" />

</LinearLayout>